[tool.poetry]
name = "site1"
version = "0.1.0"
description = "test site"
authors = ["Jean-Roland Schuler <jean-roland.schuler@hefr.ch>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
